Fix button delete not aligned with button update

--- a/assets/admin_homepage.css
+++ b/assets/admin_homepage.css
@@ -656,7 +656,6 @@ td a.detail:hover {
   td.action > form, 
   td.action > button {
     min-width: auto;
-    margin: 0.25rem;
     flex: 1;
     max-width: 150px;
   }
